Adding the assistance functionality

--- a/app/templates/roll-book.html
+++ b/app/templates/roll-book.html
@@ -10,6 +10,7 @@
     <link href="{{url_for('static', filename='css/roll-book.css')}}" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Roboto+Condensed" rel="stylesheet">
     <style>
+
     .group{
         cursor:pointer;
     }
@@ -61,7 +62,6 @@
             font-family: "Roboto Condensed", sans-serif;
             background: #373e5e;
             background: linear-gradient(#498061, #3d757d);
-            height:600px;
             overflow-y: auto;
             overflow-x: initial;
             color:white;
@@ -185,6 +185,10 @@
                 width:300px;
             }
         }
+        a{
+            color:white;
+        }
+
     </style>
 </head>
 <body>
