--- a/app/templates/excel-template.html
+++ b/app/templates/excel-template.html
@@ -2,9 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Excel Template</title>
+    <style>
+        table, td{
+            border:solid black;
+            border-collapse: collapse;
+            padding:30px;
+        }
+    </style>
 </head>
 <body>
-$END$
+    <h1>Follow this guidelines when importing a group</h1>
+    <h3>Headers don't have to be exact but they must appear in that order otherwise they <br />
+        will be rejected by the server.
+    </h3>
+    <table>
+        <tbody>
+            <tr><td colspan="5">Group Name:</td></tr>
+            <tr>
+                <td>
+                    Student Name
+                </td>
+                <td>
+                    Email
+                </td>
+                <td>
+                    Legal Guardian's Name
+                </td>
+                <td>
+                    Phone
+                </td>
+                <td>
+                    Guradian's Email
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Fill
+                </td>
+                <td>
+                    Your
+                </td>
+                <td>
+                    Information
+                </td>
+                <td>
+                    Down
+                </td>
+                <td>
+                    Here
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
