--- a/app/templates/roll-book.html
+++ b/app/templates/roll-book.html
@@ -174,6 +174,9 @@
                     border-radius:0;
                     width:105%;
             }
+            .removepanel{
+                display: none;
+            }
         }
         #search{
             margin:auto;
