--- a/app/templates/roll-book.html
+++ b/app/templates/roll-book.html
@@ -6,7 +6,7 @@
     <title>The RollBook App</title>
 
     <link href="{{url_for('static', filename='css/bootstrap.css')}}" rel="stylesheet" type="text/css" />
-    <link href="https://bootswatch.com/superhero/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://bootswatch.com/superhero/4/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{url_for('static', filename='css/roll-book.css')}}" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Roboto+Condensed" rel="stylesheet">
     <style>
